# spokane-rust

./: .env  Cargo.toml  README.md  build.rs
migrations/: 20240924041345_InitialMigration.down.sql  20240924041345_InitialMigration.up.sql
src/: handlers.rs  main.rs  models.rs  schemas.rs
src/static/: style.css
